src/objects/PANG_Request_Resource__c.object
<CustomObject>
    <description>Join object relating RWE Requests to Contacts</description>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <formula>Request__r.Date_Closed__c</formula>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <formula>Request__r.Date_Completed__c</formula>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_In_Progress__c</fullName>
        <formula>Request__r.Date_In_Progress__c</formula>
        <label>Date In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPERT_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EXPERT Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PANG_EXPERT_Member__c.EXPERT_Member_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Please note that only Active EXPERTs are displayed. Click &quot;Show all results&quot; to see all EXPERTs.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PANG_EXPERT_Member__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>RWE_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <formula>TEXT( Request__r.Request_Status__c )</formula>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>PANG_Request__c</referenceTo>
        <relationshipLabel>Lilly Resources</relationshipLabel>
        <relationshipName>RWE_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst - Statistical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Analysts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Statistician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer - Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer - ClinOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer - GPO Scientist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer - Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer - PRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer - Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer - Statistical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validator/Peer Reviewer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RWE Request Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Resource__c</columns>
        <columns>Role__c</columns>
        <columns>Request__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RWE-RR-{000000000}</displayFormat>
        <label>Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Request Resources</pluralLabel>
    <recordTypes>
        <fullName>EXPERT_Member</fullName>
        <active>true</active>
        <label>EXPERT Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Resource</fullName>
        <active>true</active>
        <label>General Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Real_World_Data_Analysis</fullName>
        <active>true</active>
        <label>Internal Real World Data Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partnership_Evaluation</fullName>
        <active>true</active>
        <label>Partnership Evaluation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>